Ran --check to completion.
Ready for actual testing.

--- a/roles/app_server/files/python_flask/templates/python-site.html
+++ b/roles/app_server/files/python_flask/templates/python-site.html
@@ -10,6 +10,6 @@
     <h1>Simple</h1>
     <p>More simple html</p>
 
-    <p><b>Reaaaaaaaaaally</b> simple</p>
+    <p>Hello: {{ request.headers["User-Agent"] }}!</p>
 </body>
 </html>
