--- a/roles/proxy_server/templates/apps.conf.j2
+++ b/roles/proxy_server/templates/apps.conf.j2
@@ -4,7 +4,7 @@ server {
 
     location / {
         include uwsgi_params;
-        uwsgi_pass {{ app_host_ip }}:{{ python_app_port }}
+        uwsgi_pass {{ python_app_ip }}:{{ python_app_port }}
     }
 
     access_log /var/log/nginx/{{ python_app_domain }}.log;
@@ -13,9 +13,9 @@ server {
 
 server {
     listen 80 default_server;
-    server_name {{ golang_host_domain }} www.{{ golang_host_domain }};
+    server_name {{ golang_app_domain }} www.{{ golang_app_domain }};
 
     location / {
-        proxy_pass {{ golang_host_ip }}:{{ golang_app_port }}
+        proxy_pass {{ golang_app_ip }}:{{ golang_app_port }}
     }
 }
