Moved to local inventory and Docker Compose

--- a/Ansible/roles/proxy_server/templates/apps.conf.j2
+++ b/Ansible/roles/proxy_server/templates/apps.conf.j2
@@ -1,10 +1,10 @@
 server {
-    listen 80 default_server;
+    listen 80;
     server_name {{ python_app_domain }} www.{{ python_app_domain }};
 
     location / {
         include uwsgi_params;
-        uwsgi_pass {{ python_app_ip }}:{{ python_app_port }}
+        uwsgi_pass {{ python_app_domain }}:{{ python_app_port }};
     }
 
     access_log /var/log/nginx/{{ python_app_domain }}.log;
@@ -12,10 +12,10 @@ server {
 }
 
 server {
-    listen 80 default_server;
+    listen 80;
     server_name {{ golang_app_domain }} www.{{ golang_app_domain }};
 
     location / {
-        proxy_pass {{ golang_app_ip }}:{{ golang_app_port }}
+        proxy_pass {{ golang_app_domain }}:{{ golang_app_port }};
     }
 }
