Python log file, html changes to distinguish

--- a/Ansible/roles/app_server/files/python_flask/templates/python-site.html
+++ b/Ansible/roles/app_server/files/python_flask/templates/python-site.html
@@ -7,9 +7,9 @@
     <title>This is a simple site</title>
 </head>
 <body>
-    <h1>Simple</h1>
+    <h1>Welcome to uWSGI Flask :D</h1>
     <p>More simple html</p>
 
-    <p>Hello: {{ request.headers["User-Agent"] }}!</p>
+    <p>Hello from the proxy: {{ request.headers["User-Agent"] }}!</p>
 </body>
 </html>
